# Drake-Final-Project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build.sh  docker-compose.yaml  docker-run.sh  main.py  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.docker/: Dockerfile  aliases.sh  docker-compose.yaml
assets/: package.xml
assets/baseball/: baseball.mtl  baseball.sdf  package.xml
assets/baseball2/: baseball.mtl
assets/bat/: bat.mtl  bat.sdf  package.xml
assets/table/: table.sdf
conf/: config.yaml
docker/: Dockerfile  docker-compose.yaml
docs/: docker.md
example/: CMakeLists.txt  add_module.cpp
example/atlas/: CMakeLists.txt
example/iiwa/: CMakeLists.txt  iiwa.cpp
example/pendulum/: CMakeLists.txt  main.cpp
pybind-example/: add_use.py  sqrt_module.py  sqrt_use.cpp
scenarios/: test.yaml
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  bindings.cpp
src/drake_core/: CMakeLists.txt
src/python/drake_sim/: controller.py  optimization.py  perception.py  scenario.py  simulation.py  test.py  utils.py
test/python/: load_assets.py
